Ram/Parser.cpp
#include "Parser.h"
#include <fstream>
#include <iostream>
#include <string>
#include <sstream>
#include <iterator>
#include <vector>
#include <algorithm> 
#include <cctype>
#include <locale>
#include "Interpreter.h"

ExpressionResult GetFuncCall(IExpression* _base, TokenReader _reader)
{
	if(_reader.GetCurType() == TT_LPAREN)
	{
		Position pos = _reader.GetCurPosition();
		TokenReader reader = TokenReader(_reader.Advance());
		std::vector<IExpression*> argExprs;

		if(reader.GetCurType() != TT_RPAREN) // Expecting at least on arg
		{
			ExpressionResult argExprResult = GetExpression(reader);

			if(argExprResult.success)
			{
				reader = argExprResult.reader;
				argExprs.push_back(argExprResult.value);

				while(true)
				{
					if(reader.GetCurType() == TT_COMMA)
					{
						reader.Advance();
						argExprResult = GetExpression(reader);

						if(argExprResult.success)
						{
							reader = argExprResult.reader;
							argExprs.push_back(argExprResult.value);
						}
						else
						{
							for(auto it : argExprs)
								delete it;

							return ExpressionResult::GenFailure("Expected function argument.", reader);
						}
					}
					else { break; }
				}
			}
			else { return ExpressionResult::GenFailure("Expected function argument or ')'.", reader); }
		}

		if(reader.GetCurType() == TT_RPAREN)
		{
			FuncCallExpression* funcCallExpr = new FuncCallExpression(_base, argExprs, pos);
			return ExpressionResult::GenSuccess(funcCallExpr, reader.Advance());
		}
		else
		{
			for(auto it : argExprs)
				delete it;

			return ExpressionResult::GenFailure("Expected ')'.", reader);
		}
	}
	else { return ExpressionResult::GenFailure("Expected '('.", _reader); }
}

ExpressionResult GetAccess(IExpression* _base, TokenReader _reader)
{
	if(_reader.GetCurType() == TT_PERIOD)
	{
		TokenReader reader = TokenReader(_reader.Advance());
		ExpressionResult memIdResult = GetIdentifier(reader);

		if(memIdResult.success)
		{
			std::string memId = ((SymbolExpression*)memIdResult.value)->symbol;
			AccessExpression* accessExpr = new AccessExpression(_base, memId, reader.GetCurPosition());

			delete memIdResult.value;
			return ExpressionResult::GenSuccess(accessExpr, memIdResult.reader.GetCurPtr());
		}
		else { return memIdResult; }
	}
	else { return ExpressionResult::GenFailure("Expected '.'.", _reader); }
}

ExpressionResult GetMembered(TokenReader _reader)
{
	if(_reader.GetCurType() == TT_LBRACKET)
	{
		TokenReader reader = TokenReader(_reader);
		StatementResult result = GetCodeBlock(reader, true);

		if(result.success)
		{
			auto assignStmnts = ((CodeBlock*)result.value)->GetStatements<Assignment>();
			std::map<std::string, IExpression*> memAssigns;

			for(auto stmnt : assignStmnts)
			{
				if(memAssigns.find(stmnt->identifier) != memAssigns.end())
				{
					delete result.value;
					return ExpressionResult::GenFailure("The member '" + stmnt->identifier + "' was already assigned.", reader);
				}
				else { memAssigns.insert_or_assign(stmnt->identifier, stmnt->expr->GetCopy()); }
			}

			MemberedExpression* memExpr = new MemberedExpression(memAssigns, _reader.GetCurPosition());

			delete result.value;
			return ExpressionResult::GenSuccess(memExpr, result.reader.GetCurPtr());
		}
		else { return ExpressionResult::GenFailure(result.message, reader); }
	}
	else { return ExpressionResult::GenFailure("Expected '{'.", _reader); }
}

ExpressionResult GetSubExpression(TokenReader _reader)
{
	if(_reader.GetCurType() == TT_LPAREN)
	{
		TokenReader reader = TokenReader(_reader.Advance());
		ExpressionResult result = GetExpression(reader);

		if(result.success)
		{
			if(result.reader.GetCurType() == TT_RPAREN) { return ExpressionResult::GenSuccess(result.value, result.reader.Advance()); }
			else
			{
				delete result.value;
				return ExpressionResult::GenFailure("Expected ')'.", reader);
			}
		}
		else { return result; }
	}
	else { return ExpressionResult::GenFailure("Expected '('.", _reader); }
}

ExpressionResult GetIdentifier(TokenReader _reader)
{
	if(_reader.GetCurType() == TT_IDENTIFIER)
	{
		IExpression* expr = new SymbolExpression(_reader.current.value, _reader.GetCurPosition());
		return ExpressionResult::GenSuccess(expr, _reader.Advance());
	}
	else { return ExpressionResult::GenFailure("Expected identifier.", _reader); }
}

ExpressionResult GetTypeName(TokenReader _reader)
{
	TokenReader reader = TokenReader(_reader.GetCurPtr());
	Position pos = reader.GetCurPosition();
	std::string typeName = "";

	while(true)
	{
		if(IsTypeName(reader.GetCurType()))
		{
			typeName += reader.current.value;
			reader.Advance();

			if(reader.GetCurType() == TT_PERIOD)
			{
				reader.Advance();
				typeName += ".";
			}
			else
			{
				IExpression* expr = new SymbolExpression(typeName, reader.GetCurPosition());
				return ExpressionResult::GenSuccess(expr, reader.GetCurPtr());
			}
		}
		else { return ExpressionResult::GenFailure("Expected type name.", reader); }
	}
}

ExpressionResult GetSingular(TokenReader _reader)
{
	Token token = _reader.current;

	if(token.type == TT_LPAREN) { return GetSubExpression(_reader); }
	else if(token.type == TT_IDENTIFIER) { return GetIdentifier(_reader); }
	else if(token.type == TT_LBRACKET) { return GetMembered(_reader); }
	else
	{
		IExpression* expr;

		if(token.type == TT_INTEGER_LIT) { expr = new ValueExpression(new IntValue(std::stoi(token.value), token.position)); }
		else if(token.type == TT_FLOAT_LIT) { expr = new ValueExpression(new FloatValue(std::stof(token.value), token.position)); }
		else if(token.type == TT_STRING_LIT) { expr = new ValueExpression(new StringValue(token.value, token.position)); }
		else if(token.type == TT_TRUE) { expr = new ValueExpression(new BoolValue(true, token.position)); }
		else if(token.type == TT_FALSE) { expr = new ValueExpression(new BoolValue(false, token.position)); }
		else if(token.type == TT_VOID) { expr = new ValueExpression(new VoidValue(token.position)); }
		else { return ExpressionResult::GenFailure("Value could not be parsed.", _reader); }

		return ExpressionResult::GenSuccess(expr, _reader.Advance());
	}
}

ExpressionResult GetCast(TokenReader _reader)
{
	if(_reader.GetCurType() == TT_LT)
	{
		Position pos = _reader.GetCurPosition();
		TokenReader reader = TokenReader(_reader.Advance());
		std::string typeName;

		ExpressionResult typeNameResult = GetTypeName(reader);

		if(typeNameResult.success)
		{
			reader = typeNameResult.reader;
			typeName = ((SymbolExpression*)typeNameResult.value)->symbol;
			delete typeNameResult.value;
		}
		else { return typeNameResult; }

		if(reader.GetCurType() == TT_GT)
		{
			reader.Advance();

			ExpressionResult factorResult = GetFactor(reader);

			if(factorResult.success)
			{
				CastExpression* castExpr = new CastExpression(typeName, factorResult.value, pos);
				return ExpressionResult::GenSuccess(castExpr, factorResult.reader.GetCurPtr());
			}
			else { return factorResult; }
		}
		else { return ExpressionResult::GenFailure("Expected '>'.", reader); }
	}
	else { return ExpressionResult::GenFailure("Expected '<'.", _reader); }
}

ExpressionResult GetFactor(TokenReader _reader)
{
	if(_reader.GetCurType() == TT_LT) { return GetCast(_reader); }
	else
	{
		Position pos = _reader.GetCurPosition();
		bool negated = false;

		if(_reader.GetCurType() == TT_MINUS)
			negated = true;

		ExpressionResult result = GetSingular(negated ? _reader.Advance() : _reader.GetCurPtr());

		if(result.success)
		{
			TokenReader reader = result.reader;
			IExpression* factorExpr = negated ? new NegationExpression(result.value, pos) : result.value;

			while(true)
			{
				if(reader.GetCurType() == TT_PERIOD)
				{
					ExpressionResult accessResult = GetAccess(factorExpr, reader);

					if(accessResult.success)
					{
						reader = accessResult.reader;
						factorExpr = accessResult.value;
					}
					else
					{
						delete factorExpr;
						return accessResult;
					}
				}
				else if(reader.GetCurType() == TT_LPAREN)
				{
					ExpressionResult funcCallResult = GetFuncCall(factorExpr, reader);

					if(funcCallResult.success)
					{
						reader = funcCallResult.reader;
						factorExpr = funcCallResult.value;
					}
					else
					{
						delete factorExpr;
						return funcCallResult;
					}
				}
				else { break; }
			}

			return ExpressionResult::GenSuccess(factorExpr, reader.GetCurPtr());
		}
		else { return result; }
	}
}

ExpressionResult GetTerm(TokenReader _reader)
{
	ExpressionResult leftResult = GetFactor(_reader);

	if(leftResult.success)
	{
		TokenReader reader = leftResult.reader;
		TokenType tokenType = reader.GetCurType();

		if(tokenType == TT_TIMES || tokenType == TT_DIVIDE)
		{
			reader.Advance();
			ExpressionResult rightResult = GetTerm(reader);

			if(rightResult.success)
			{
				BinopExpression::OP operation = BinopExpression::TokenTypeToOp(tokenType);
				BinopExpression* binopExpr = new BinopExpression(leftResult.value, rightResult.value, operation, leftResult.reader.GetCurPosition());

				return ExpressionResult::GenSuccess(binopExpr, rightResult.reader.GetCurPtr());
			}
			else { return rightResult; }
		}
		else { return leftResult; }
	}
	else { return leftResult; }
}

ExpressionResult GetBinopExpr(TokenReader _reader)
{
	ExpressionResult leftResult = GetTerm(_reader);

	if(leftResult.success)
	{
		TokenReader reader = leftResult.reader;
		TokenType tokenType = reader.GetCurType();

		if(tokenType == TT_PLUS || tokenType == TT_MINUS)
		{
			reader.Advance();
			ExpressionResult rightResult = GetBinopExpr(reader);

			if(rightResult.success)
			{
				BinopExpression::OP operation = BinopExpression::TokenTypeToOp(tokenType);
				BinopExpression* binopExpr = new BinopExpression(leftResult.value, rightResult.value, operation, leftResult.reader.GetCurPosition());

				return ExpressionResult::GenSuccess(binopExpr, rightResult.reader.GetCurPtr());
			}
			else { return rightResult; }
		}
		else { return leftResult; }
	}
	else { return leftResult; }
}

ExpressionResult GetExpression(TokenReader _reader)
{
	ExpressionResult leftResult = GetBinopExpr(_reader);

	if(leftResult.success)
	{
		TokenReader reader = leftResult.reader;
		TokenType tokenType = reader.GetCurType();

		if(tokenType == TT_LT || tokenType == TT_GT || tokenType == TT_LTEQ || tokenType == TT_GTEQ)
		{
			reader.Advance();
			ExpressionResult rightResult = GetBinopExpr(reader);

			if(rightResult.success)
			{
				BinopExpression::OP operation = BinopExpression::TokenTypeToOp(tokenType);
				BinopExpression* binopExpr = new BinopExpression(leftResult.value, rightResult.value, operation, leftResult.reader.GetCurPosition());

				return ExpressionResult::GenSuccess(binopExpr, rightResult.reader.GetCurPtr());
			}
			else { return rightResult; }
		}
		else { return leftResult; }
	}
	else { return leftResult; }
}

StatementResult GetAssignment(TokenReader _reader, bool _isLet)
{
	if(_reader.GetCurType() == TT_IDENTIFIER)
	{
		Position pos = _reader.GetCurPosition();
		std::string identifier = _reader.current.value;
		TokenReader reader = TokenReader(_reader.Advance());

		if(reader.GetCurType() == TT_EQUALS)
		{
			reader.Advance();

			ExpressionResult result = GetExpression(reader);

			if(result.success)
			{
				Assignment* assignment = new Assignment(identifier, result.value, _isLet, pos);
				return StatementResult::GenSuccess(assignment, result.reader.GetCurPtr());
			}
			else { return StatementResult::GenFailure(result.message, reader); }
		}
		else { return StatementResult::GenFailure("Expected = after identifier.", reader); }
	}
	else { return StatementResult::GenFailure("Expected identifier.", _reader); }
}

StatementResult GetDefinition(TokenReader _reader)
{
	if(_reader.GetCurType() == TT_IDENTIFIER)
	{
		Position pos = _reader.GetCurPosition();
		std::string identifier = _reader.current.value;
		TokenReader reader = TokenReader(_reader.Advance());

		if(reader.GetCurType() == TT_COLON)
		{
			reader.Advance();

			if(IsTypeName(reader.GetCurType()))
			{
				MemberDefinition* memDef = new MemberDefinition(identifier, reader.current.value, pos);
				return StatementResult::GenSuccess(memDef, reader.Advance());
			}
			else { return StatementResult::GenFailure("Expected typename after :.", reader); }
		}
		else { return StatementResult::GenFailure("Expected : after identifier.", reader); }
	}
	else { return StatementResult::GenFailure("Expected identifier.", _reader); }
}

StatementResult GetCodeBlock(TokenReader _reader, bool _assignmentsOnly = false)
{
	if(_reader.GetCurType() == TT_LBRACKET)
	{
		Position pos = _reader.GetCurPosition();
		TokenReader reader = TokenReader(_reader.Advance());
		std::vector<IStatement*> statements;

		while(!reader.AtEOF())
		{
			StatementResult result = _assignmentsOnly ? GetAssignment(reader, false) : GetStatement(reader);

			if(result.success)
			{
				reader = result.reader;

				if(reader.GetCurType() == TT_RBRACKET)
				{
					statements.push_back(result.value);
					reader.Advance();
					return StatementResult::GenSuccess(new CodeBlock(statements, pos, true), reader.GetCurPtr());
				}
				else if(reader.GetCurType() == TT_SEMICOLON)
				{
					statements.push_back(result.value);
					reader.Advance();

					if(reader.GetCurType() == TT_RBRACKET)
					{
						reader.Advance();
						return StatementResult::GenSuccess(new CodeBlock(statements, pos, true), reader.GetCurPtr());
					}
				}
				else { return StatementResult::GenFailure("Expected ';'. ", reader); }
			}
			else { return result; }
		}

		return StatementResult::GenFailure("Expected '}'. ", reader);
	}
	else { return StatementResult::GenFailure("Expected '{'. ", _reader); }
}

StatementResult GetSimpleStatement(TokenReader _reader)
{
	ExpressionResult result = GetExpression(_reader);

	if(result.success) { return StatementResult::GenSuccess(new SimpleStatement(result.value), result.reader.GetCurPtr()); }
	else { return StatementResult::GenFailure(result.message, result.reader); }
}

StatementResult GetForLoop(TokenReader _reader)
{
	if(_reader.GetCurType() == TT_FOR)
	{
		Position pos = _reader.GetCurPosition();
		TokenReader reader = TokenReader(_reader.Advance());
		StatementResult assignResult = GetAssignment(reader, true);

		if(assignResult.success)
		{
			reader = assignResult.reader;
			if(reader.GetCurType() == TT_IF)
			{
				reader.Advance();
				ExpressionResult condResult = GetExpression(reader);

				if(condResult.success)
				{
					reader = condResult.reader;
					if(reader.GetCurType() == TT_THEN)
					{
						reader.Advance();
						StatementResult stmtResult = GetStatement(reader);

						if(stmtResult.success)
						{
							reader = stmtResult.reader;
							if(reader.GetCurType() == TT_FINALLY)
							{
								reader.Advance();
								StatementResult finResult = GetAssignment(reader, false);

								if(finResult.success)
								{
									Assignment* initAssign = (Assignment*)assignResult.value;
									IExpression* condExpr = condResult.value;
									IStatement* statement = stmtResult.value;
									Assignment* finStmt = (Assignment*)finResult.value;

									ForLoop* forLoop = new ForLoop(initAssign, condExpr, statement, finStmt, pos);
									return StatementResult::GenSuccess(forLoop, finResult.reader.GetCurPtr());
								}
								else { return finResult; }
							}
							else { return StatementResult::GenFailure("Expected keyword 'finally'.", reader); }
						}
						else { return stmtResult; }
					}
					else { return StatementResult::GenFailure("Expected keyword 'then'.", reader); }
				}
				else { return StatementResult::GenFailure(condResult.message, reader); }
			}
			else { return StatementResult::GenFailure("Expected keyword 'if'.", reader); }
		}
		else { return assignResult; }
	}
	else { return StatementResult::GenFailure("Expected keyword 'for'.", _reader); }
}

StatementResult GetFuncDeclaration(TokenReader _reader)
{
	if(_reader.GetCurType() == TT_FUNC)
	{
		Position pos = _reader.GetCurPosition();
		TokenReader reader = TokenReader(_reader.Advance());

		if(reader.GetCurType() == TT_IDENTIFIER)
		{
			std::string identifier = reader.current.value;
			reader.Advance();

			if(reader.GetCurType() == TT_LPAREN)
			{
				reader.Advance();
				std::vector<Definition> argDefs;
				std::vector<std::string> usedArgNames;

				if(reader.GetCurType() == TT_RPAREN) { reader.Advance(); }
				else
				{
					while(!reader.AtEOF())
					{
						StatementResult result = GetDefinition(reader);

						if(result.success)
						{
							Definition argDef = ((MemberDefinition*)result.value)->definition;

							reader = result.reader;
							delete result.value;

							if(std::find(usedArgNames.begin(), usedArgNames.end(), argDef.identifier) != usedArgNames.end())
								return StatementResult::GenFailure("The argument named '" + argDef.identifier + "' was already used.", reader);

							argDefs.push_back(argDef);
							usedArgNames.push_back(argDef.identifier);

							if(reader.GetCurType() == TT_COMMA) { reader.Advance(); }
							else if(reader.GetCurType() == TT_RPAREN)
							{
								reader.Advance();
								break;
							}
							else { return StatementResult::GenFailure("Expected ')'.", reader); }
						}
						else { return result; }
					}
				}

				if(reader.GetCurType() == TT_COLON)
				{
					reader.Advance();

					if(IsTypeName(reader.GetCurType()))
					{
						std::string retTypeName = reader.current.value;
						reader.Advance();

						if(reader.GetCurType() == TT_EQUALS)
						{
							reader.Advance();

							StatementResult stmtResult = GetStatement(reader);

							if(stmtResult.success)
							{
								FuncDeclaration* funcDecl = new FuncDeclaration(identifier, argDefs, retTypeName, stmtResult.value, pos);
								return StatementResult::GenSuccess(funcDecl, stmtResult.reader.GetCurPtr());
							}
							else { return stmtResult; }
						}
						else { return StatementResult::GenFailure("Expected '='. ", _reader); }
					}
					else { return StatementResult::GenFailure("Expected identifier.", _reader); }
				}
				else { return StatementResult::GenFailure("Expected ':'. ", _reader); }
			}
			else { return StatementResult::GenFailure("Expected '('. ", _reader); }
		}
		else { return StatementResult::GenFailure("Expected identifier.", _reader); }
	}
	else { return StatementResult::GenFailure("Expected keyword 'def'.", _reader); }
}

StatementResult GetTypeDefinition(TokenReader _reader)
{
	if(_reader.GetCurType() == TT_DEF)
	{
		Position pos = _reader.GetCurPosition();
		TokenReader reader = TokenReader(_reader.Advance());

		if(reader.GetCurType() == TT_IDENTIFIER)
		{
			std::string identifier = reader.current.value;
			reader.Advance();

			if(reader.GetCurType() == TT_EQUALS)
			{
				reader.Advance();

				if(reader.GetCurType() == TT_LBRACKET)
				{
					reader.Advance();
					std::map<std::string, std::string> memDefs;

					while(!reader.AtEOF())
					{
						StatementResult result = GetDefinition(reader);

						if(result.success)
						{
							Definition memDef = ((MemberDefinition*)result.value)->definition;

							reader = result.reader;
							delete result.value;

							if(memDefs.find(memDef.identifier) != memDefs.end())
								return StatementResult::GenFailure("The member '" + memDef.identifier + "' was already defined.", reader);

							TokenType lastTokenType = reader.GetCurType();

							if(lastTokenType == TT_SEMICOLON || lastTokenType == TT_RBRACKET)
							{
								memDefs.insert_or_assign(memDef.identifier, memDef.typeName);
								reader.Advance();

								if(lastTokenType == TT_RBRACKET || reader.GetCurType() == TT_RBRACKET)
								{
									if(reader.GetCurType() == TT_RBRACKET)
										reader.Advance();

									//Checking that intrinsic members have not been defined
									if(memDefs.find("__bool__") != memDefs.end()) { return StatementResult::GenFailure(identifier + ".__bool__ cannot be explicitly defined.", reader); }
									if(memDefs.find("__string__") != memDefs.end()) { return StatementResult::GenFailure(identifier + ".__string__ cannot be explicitly defined.", reader); }

									return StatementResult::GenSuccess(new TypeDefinition(identifier, memDefs, pos), reader.GetCurPtr());
								}
							}
							else { return StatementResult::GenFailure("Expected ';' or '}'.", reader); }
						}
						else { return result; }
					}

					return StatementResult::GenFailure("Expected '}'. ", reader);
				}
				else { return StatementResult::GenFailure("Expected '{'. ", _reader); }
			}
			else { return StatementResult::GenFailure("Expected = after identifier.", reader); }
		}
		else { return StatementResult::GenFailure("Expected identifier.", _reader); }
	}
	else { return StatementResult::GenFailure("Expected keyword 'def'.", _reader); }
}

StatementResult GetStatement(TokenReader _reader)
{
	Token token = _reader.current;

	if(_reader.GetCurType() == TT_LBRACKET)
		return GetCodeBlock(_reader);

	if(_reader.GetCurType() == TT_LET)
	{
		Position pos = _reader.GetCurPosition();

		_reader.Advance();
		if(_reader.GetCurType() == TT_IDENTIFIER) { return GetAssignment(_reader, true); }
		else { return StatementResult::GenFailure("Expected identifier after let.", _reader); }
	}

	if(_reader.GetCurType() == TT_FOR)
		return GetForLoop(_reader);

	if(_reader.GetCurType() == TT_DEF)
		return GetTypeDefinition(_reader);

	if(_reader.GetCurType() == TT_FUNC)
		return GetFuncDeclaration(_reader);

	if(_reader.GetCurType() == TT_IDENTIFIER)
	{
		StatementResult result = GetAssignment(_reader, false);

		if(result.success)
			return result;
	}

	return GetSimpleStatement(_reader);
}

FileParseResult Parse(Token* _tokens)
{
	TokenReader reader = TokenReader(_tokens);
	std::vector<IStatement*> statements;
	bool inIncludes = false;

	while(!reader.AtEOF())
	{
		StatementResult result = GetStatement(reader);

		if(result.success)
		{
			reader = result.reader;

			if(reader.GetCurType() == TT_SEMICOLON)
			{
				statements.push_back(result.value);
				reader.Advance();
			}
			else { return FileParseResult::GenFailure("Expected ';'. " + reader.GetCurPosition().ToString()); }
		}
		else { return FileParseResult::GenFailure(result.message + result.reader.GetCurPosition().ToString()); }
	}

	return FileParseResult::GenSuccess(statements);
}

IValue* RunFile(const char* _path, Environment* _env, bool _runInSubEnv)
{
	std::vector<std::string> fileLines;
	TokensResult tokenizationResult = TokenizeFile(_path, fileLines);
	std::string path = _path;

	std::cout << "Running " + path << std::endl;

	if(tokenizationResult.success)
	{
		std::cout << "Tokenized!" << std::endl;

		FileParseResult parsingResult = Parse(tokenizationResult.value.data());

		if(parsingResult.success)
		{
			std::cout << "Parsed!" << std::endl << std::endl;

			std::vector<IStatement*> statements = parsingResult.value;
			IValue* endVal;

			if(statements.size() > 0)
			{
				Interpreter::SRC_LINES = fileLines; //One needs to be made per file
				CodeBlock program = CodeBlock(statements, statements[0]->_position, _runInSubEnv);
				endVal = program.Execute(_env);
			}
			else { endVal = new VoidValue(Position()); }

			std::cout << "Successfully Ran " + path << std::endl << std::endl;
			return endVal;
		}
		else { return Exception_CompilationError("There was a parsing error in " + path + "\n\n" + parsingResult.message); }
	}
	else { return Exception_CompilationError("There was a tokenizing error in " + path + "\n\n" + tokenizationResult.message); }
}
